# dstools

./: .gitignore  .gitmodules  Makefile  Makefile.am  configure.ac  dlditool.prj
source/: dlditool.c
src/: r4denc.cpp
src/dlditool/: dlditool.c
src/nds_texcompress/: compress_texture.cpp  compress_texture.h  image.h  nds_texcompress.cpp
src/r4denc/: r4denc.cpp
