# Makefile.am -- Process this file with automake to produce Makefile.in

bin_PROGRAMS = r4denc dlditool dslink

r4denc_SOURCES		=	src/r4denc/r4denc.cpp

dlditool_SOURCES	=	src/dlditool/dlditool.c

dslink_SOURCES		=	src/dslink/little.h src/dslink/ndsheader.h src/dslink/main.cpp

EXTRA_DIST = autogen.sh
